--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: asalama <marvin@42.fr>                     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2015/11/25 16:46:12 by asalama           #+#    #+#              #
-#    Updated: 2015/12/16 17:42:26 by fhuang           ###   ########.fr        #
+#    Updated: 2015/12/21 18:03:24 by asalama          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
