--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: asalama <marvin@42.fr>                     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2015/11/25 16:46:12 by asalama           #+#    #+#              #
-#    Updated: 2015/12/29 13:55:57 by asalama          ###   ########.fr        #
+#    Updated: 2015/12/31 12:44:33 by fhuang           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
